--- a/archivos/style.css
+++ b/archivos/style.css
@@ -7,6 +7,7 @@
 body{
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     height: 100vh;
     font-family: sans-serif;
@@ -23,4 +24,14 @@ body{
 
 #papel{
     margin: 0px 50px;
+}
+
+#resultado{
+    margin: 50px 0px;
+    font-size: 20px;
+    font-weight: bold;
+    color: red;
+    background-color: aqua;
+    padding: 10px;
+    border-radius: 10px;
 }
