--- a/archivos/style.css
+++ b/archivos/style.css
@@ -11,7 +11,10 @@ body{
     align-items: center;
     height: 100vh;
     font-family: sans-serif;
-    background-color: aqua;
+    background-image: url(imagenes/Imagen1.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 #img{
@@ -30,8 +33,17 @@ body{
     margin: 50px 0px;
     font-size: 20px;
     font-weight: bold;
-    color: red;
-    background-color: aqua;
+    color: white;
     padding: 10px;
     border-radius: 10px;
+}
+
+h1{
+    font-size: 30px;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    background-color: rgb(74, 105, 105);
+    padding: 10px;
+    border-radius: 10px;
+    margin: 50px 0px;
 }
