--- a/archivos/style.css
+++ b/archivos/style.css
@@ -47,3 +47,11 @@ h1{
     border-radius: 10px;
     margin: 50px 0px;
 }
+
+#victorias{
+    color: #ffffff;
+}
+
+#derrotas{
+    color: #ffffff;
+}
